# cubeOGL

./: CMakeLists.txt
src/: config.h  cube.cpp  cube.h  glad.c  main.cpp  material.cpp  material.h
src/shaders/: fragment.txt  vertex.txt
